# battle-engine

./: .gitignore  CMakeLists.txt  CODING_STYLE.md  README.md  generate.sh  windows_README.md
CMakeModules/: FindV8.cmake
assets/: getEntity.json  onTurn.json  sample.json  spell.json  test-2016-07-04.json  test-2016-07-05.json  test-2017-01-02-normal-fight.json  test-syntax-error-01.json  test-syntax-error-02.json
assets/test/: los.json  player1win.json  trap.json
assets/testspells/: ExecuteUnitTest.sh  test_badeye.json  test_bladestorm.json  test_bumpshield.json  test_coldfeet.json  test_curse.json  test_dazzle.json  test_dazzlingpoison.json  test_farsight.json  test_fireball.json  test_foresight.json  test_ghostarrow.json  test_heavypoison.json  test_holyhand.json  test_holywell.json  test_meteor.json  test_meteor_onself.json  test_shadowstep.json  test_shieldbreak.json  test_smash.json  test_snipe.json  tmp.txt
assets/testspells/results/: BladestormResults.txt  ColdfeetResults.txt  DazzleResults.txt  DazzlingpoisonResults.txt  FireballResults.txt  GhostarrowResults.txt  HeavypoisonResults.txt  HolyhandResults.txt  HolywellResults.txt  MeteorOnselfResults.txt  MeteorResults.txt  ShadowstepResults.txt  SmashResults.txt  SnipeResults.txt  foresightResults.txt
cmake/: Config.cmake
src/: CMakeLists.txt  main.cpp
src/jsoncpp/: CMakeLists.txt
src/tacticode/: CMakeLists.txt
src/tacticode/effect/: AEffect.cpp  AEffect.hpp  CMakeLists.txt  IEffect.hpp
src/tacticode/engine/: #Map.cpp#  BattleEngine.cpp  BattleEngine.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Character.cpp  Character.hpp  Entity.hpp  ICharacterScript.hpp  Map.cpp  Map.hpp  Team.cpp  Team.hpp
src/tacticode/engine/error/: InvalidSubscribeLocation.hpp
src/tacticode/file/: CMakeLists.txt  IValue.hpp  JsonLoader.cpp  JsonLoader.hpp  JsonValue.cpp  JsonValue.hpp
src/tacticode/file/error/: InvalidConfiguration.hpp
src/tacticode/script/: CMakeLists.txt  CharacterScript.cpp  CharacterScript.hpp  Context.cpp  Context.hpp  Script.cpp  Script.hpp  ScriptFactory.cpp  ScriptFactory.hpp  Script_.hpp  script.hpp  script_intern.hpp  v8String.cpp  v8String.hpp  wrapper.hpp
src/tacticode/script/api/: AFunction.hpp  ApiCollection.cpp  ApiCollection.hpp  CMakeLists.txt  api_intern.hpp  injectSpellApi.cpp  injectSpellApi.hpp
src/tacticode/spell/: ASpell.cpp  ASpell.hpp  BuffEffect.cpp  BuffEffect.hpp  BumpEffect.cpp  BumpEffect.hpp  CMakeLists.txt  CrossAoeEffect.cpp  CrossAoeEffect.hpp  DamageEffect.cpp  DamageEffect.hpp  HealEffect.cpp  HealEffect.hpp  IEffect.hpp  ISpell.cpp  ISpell.hpp  InvisibleEffect.cpp  InvisibleEffect.hpp  LineAoeEffect.cpp  LineAoeEffect.hpp  RangeEffect.cpp  RangeEffect.hpp  RemoveSpeedEffect.cpp  RemoveSpeedEffect.hpp  SilenceEffect.cpp  SilenceEffect.hpp  Spell.cpp  Spell.hpp  SpellFactory.cpp  SpellFactory.hpp  StunEffect.cpp  StunEffect.hpp  Trap.cpp  Trap.hpp  TrapEffect.cpp  TrapEffect.hpp  TrapSpell.cpp  TrapSpell.hpp  Trapp.cpp  Trapp.hpp  (+2 more)
src/tacticode/system/: CMakeLists.txt  Vector2.hpp  utils.hpp
src/tacticode/system/error/: DivideByZeroError.hpp
src/tacticode/utils/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  Debug.cpp  Debug.hpp  FightLogger.cpp  FightLogger.hpp  Singleton.hpp  utils.hpp
